added etl and dataviz notebook

--- a/notebooks/etl.ipynb
+++ b/notebooks/etl.ipynb
@@ -6,8 +6,8 @@
    "id": "dddf01b5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-16T08:26:32.067715Z",
-     "start_time": "2022-04-16T08:26:31.530168Z"
+     "end_time": "2022-04-17T12:53:55.022066Z",
+     "start_time": "2022-04-17T12:53:54.036920Z"
     }
    },
    "outputs": [],
@@ -31,13 +31,13 @@
    "id": "8492649b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-16T08:26:32.076080Z",
-     "start_time": "2022-04-16T08:26:32.072868Z"
+     "end_time": "2022-04-17T12:53:55.029800Z",
+     "start_time": "2022-04-17T12:53:55.024224Z"
     }
    },
    "outputs": [],
    "source": [
-    "conn = sqlite3.connect(\"../data/research.db\")\n",
+    "conn = sqlite3.connect(\"../data/db.sqlite3\")\n",
     "cur = conn.cursor()"
    ]
   },
@@ -47,8 +47,8 @@
    "id": "bdd608e8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-16T08:26:32.131814Z",
-     "start_time": "2022-04-16T08:26:32.077921Z"
+     "end_time": "2022-04-17T12:53:55.061074Z",
+     "start_time": "2022-04-17T12:53:55.032833Z"
     }
    },
    "outputs": [],
@@ -74,8 +74,8 @@
    "id": "b5b95f24",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-16T08:26:32.174689Z",
-     "start_time": "2022-04-16T08:26:32.134068Z"
+     "end_time": "2022-04-17T12:53:55.163074Z",
+     "start_time": "2022-04-17T12:53:55.064299Z"
     }
    },
    "outputs": [],
@@ -231,8 +231,8 @@
    "id": "8dfbcae6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-16T08:26:32.800544Z",
-     "start_time": "2022-04-16T08:26:32.177031Z"
+     "end_time": "2022-04-17T12:53:55.959529Z",
+     "start_time": "2022-04-17T12:53:55.166211Z"
     }
    },
    "outputs": [],
@@ -246,8 +246,8 @@
    "id": "a5fad74d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-16T08:26:32.809166Z",
-     "start_time": "2022-04-16T08:26:32.802919Z"
+     "end_time": "2022-04-17T12:53:55.968698Z",
+     "start_time": "2022-04-17T12:53:55.961999Z"
     }
    },
    "outputs": [],
@@ -281,8 +281,8 @@
    "id": "4c847f31",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-16T08:26:33.890146Z",
-     "start_time": "2022-04-16T08:26:32.811048Z"
+     "end_time": "2022-04-17T12:53:57.207035Z",
+     "start_time": "2022-04-17T12:53:55.971132Z"
     }
    },
    "outputs": [],
@@ -345,8 +345,8 @@
    "id": "bb8f616a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-16T08:26:33.930008Z",
-     "start_time": "2022-04-16T08:26:33.896084Z"
+     "end_time": "2022-04-17T12:53:57.249416Z",
+     "start_time": "2022-04-17T12:53:57.209414Z"
     }
    },
    "outputs": [],
@@ -393,8 +393,8 @@
    "id": "47496955",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-16T08:26:33.942355Z",
-     "start_time": "2022-04-16T08:26:33.932722Z"
+     "end_time": "2022-04-17T12:53:57.268535Z",
+     "start_time": "2022-04-17T12:53:57.253387Z"
     }
    },
    "outputs": [],
@@ -423,8 +423,8 @@
    "id": "bb1602b5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-16T08:26:33.984778Z",
-     "start_time": "2022-04-16T08:26:33.944511Z"
+     "end_time": "2022-04-17T12:53:57.323748Z",
+     "start_time": "2022-04-17T12:53:57.270860Z"
     }
    },
    "outputs": [],
@@ -464,8 +464,8 @@
    "id": "d68f4a2d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-16T08:26:34.387196Z",
-     "start_time": "2022-04-16T08:26:33.986722Z"
+     "end_time": "2022-04-17T12:53:57.355174Z",
+     "start_time": "2022-04-17T12:53:57.326189Z"
     }
    },
    "outputs": [],
@@ -501,8 +501,8 @@
    "id": "e32a6970",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-16T08:26:34.428734Z",
-     "start_time": "2022-04-16T08:26:34.389458Z"
+     "end_time": "2022-04-17T12:53:57.398147Z",
+     "start_time": "2022-04-17T12:53:57.357540Z"
     }
    },
    "outputs": [],
@@ -540,8 +540,8 @@
    "id": "430fa6ae",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-16T08:26:34.452035Z",
-     "start_time": "2022-04-16T08:26:34.430908Z"
+     "end_time": "2022-04-17T12:53:57.432891Z",
+     "start_time": "2022-04-17T12:53:57.400467Z"
     }
    },
    "outputs": [],
@@ -578,8 +578,8 @@
    "id": "edc5cbb1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-16T08:26:34.476684Z",
-     "start_time": "2022-04-16T08:26:34.454292Z"
+     "end_time": "2022-04-17T12:53:57.466231Z",
+     "start_time": "2022-04-17T12:53:57.435154Z"
     }
    },
    "outputs": [],
@@ -617,8 +617,8 @@
    "id": "a1fb783a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-16T08:26:34.555758Z",
-     "start_time": "2022-04-16T08:26:34.478825Z"
+     "end_time": "2022-04-17T12:53:57.523743Z",
+     "start_time": "2022-04-17T12:53:57.468899Z"
     }
    },
    "outputs": [],
@@ -666,8 +666,8 @@
    "id": "1bf2a860",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-16T08:26:34.610541Z",
-     "start_time": "2022-04-16T08:26:34.558061Z"
+     "end_time": "2022-04-17T12:53:57.583275Z",
+     "start_time": "2022-04-17T12:53:57.525952Z"
     }
    },
    "outputs": [],
