added text augment in research spec and updated stacked bar to bar-table

--- a/notebooks/etl.ipynb
+++ b/notebooks/etl.ipynb
@@ -6,8 +6,8 @@
    "id": "dddf01b5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-02T14:43:38.151992Z",
-     "start_time": "2022-05-02T14:43:37.615493Z"
+     "end_time": "2022-05-08T14:21:45.281881Z",
+     "start_time": "2022-05-08T14:21:44.408567Z"
     }
    },
    "outputs": [],
@@ -47,8 +47,8 @@
    "id": "8492649b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-02T14:43:38.159275Z",
-     "start_time": "2022-05-02T14:43:38.154049Z"
+     "end_time": "2022-05-08T14:21:48.869631Z",
+     "start_time": "2022-05-08T14:21:48.860546Z"
     }
    },
    "outputs": [],
@@ -1701,6 +1701,213 @@
     "\n",
     "process_faculty(cur, conn, faculty)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "788cda0e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-08T15:04:10.603425Z",
+     "start_time": "2022-05-08T15:04:10.574915Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Abra State Institute of Science and Technology</td>\n",
+       "      <td>ASIST</td>\n",
+       "      <td>Main</td>\n",
+       "      <td>Lagangilang</td>\n",
+       "      <td>Abra</td>\n",
+       "      <td>CAR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Abra State Institute of Science and Technology</td>\n",
+       "      <td>ASIST</td>\n",
+       "      <td>Bangued</td>\n",
+       "      <td>Bangued</td>\n",
+       "      <td>Abra</td>\n",
+       "      <td>CAR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Adamson University</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>Main</td>\n",
+       "      <td>Manila</td>\n",
+       "      <td>Manila</td>\n",
+       "      <td>NCR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Agusan del Sur State College of Agriculture an...</td>\n",
+       "      <td>ASSCAT</td>\n",
+       "      <td>Main</td>\n",
+       "      <td>Bunawan</td>\n",
+       "      <td>Agusan del Sur</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Agusan del Sur State College of Agriculture an...</td>\n",
+       "      <td>ASSCAT</td>\n",
+       "      <td>Trento</td>\n",
+       "      <td>Trento</td>\n",
+       "      <td>Agusan del Sur</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>95</td>\n",
+       "      <td>University of the Philippines Visayas</td>\n",
+       "      <td>UP-Visayas</td>\n",
+       "      <td>Visayas</td>\n",
+       "      <td>Miagao</td>\n",
+       "      <td>Iloilo</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>96</td>\n",
+       "      <td>Western Mindanao State University</td>\n",
+       "      <td>WMSU</td>\n",
+       "      <td>Main</td>\n",
+       "      <td>Zamboanga</td>\n",
+       "      <td>Zamboanga del Sur</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>97</td>\n",
+       "      <td>Western Philippines University</td>\n",
+       "      <td>WPU</td>\n",
+       "      <td>Main</td>\n",
+       "      <td>Aborlan</td>\n",
+       "      <td>Palawan</td>\n",
+       "      <td>4B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>98</td>\n",
+       "      <td>Xavier University</td>\n",
+       "      <td>XU</td>\n",
+       "      <td>Main</td>\n",
+       "      <td>Cagayan de Oro</td>\n",
+       "      <td>Misamis Oriental</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>99</td>\n",
+       "      <td>Zamboanga City State Polytechnic College</td>\n",
+       "      <td>ZCPC</td>\n",
+       "      <td>Main</td>\n",
+       "      <td>Zamboanga</td>\n",
+       "      <td>Zamboanga del Sur</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>99 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     0                                                  1           2  \\\n",
+       "0    1     Abra State Institute of Science and Technology       ASIST   \n",
+       "1    2     Abra State Institute of Science and Technology       ASIST   \n",
+       "2    3                                 Adamson University          AU   \n",
+       "3    4  Agusan del Sur State College of Agriculture an...      ASSCAT   \n",
+       "4    5  Agusan del Sur State College of Agriculture an...      ASSCAT   \n",
+       "..  ..                                                ...         ...   \n",
+       "94  95              University of the Philippines Visayas  UP-Visayas   \n",
+       "95  96                  Western Mindanao State University        WMSU   \n",
+       "96  97                     Western Philippines University         WPU   \n",
+       "97  98                                  Xavier University          XU   \n",
+       "98  99           Zamboanga City State Polytechnic College        ZCPC   \n",
+       "\n",
+       "          3               4                  5    6  \n",
+       "0      Main     Lagangilang               Abra  CAR  \n",
+       "1   Bangued         Bangued               Abra  CAR  \n",
+       "2      Main          Manila             Manila  NCR  \n",
+       "3      Main         Bunawan     Agusan del Sur   13  \n",
+       "4    Trento          Trento     Agusan del Sur   13  \n",
+       "..      ...             ...                ...  ...  \n",
+       "94  Visayas          Miagao             Iloilo    6  \n",
+       "95     Main       Zamboanga  Zamboanga del Sur    9  \n",
+       "96     Main         Aborlan            Palawan   4B  \n",
+       "97     Main  Cagayan de Oro   Misamis Oriental   10  \n",
+       "98     Main       Zamboanga  Zamboanga del Sur    9  \n",
+       "\n",
+       "[99 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cur.execute(\"\"\"\n",
+    "SELECT * FROM SCHOOL;\n",
+    "\"\"\")\n",
+    "pd.DataFrame(cur.fetchall())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33c89797",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
